--- a/css/styles.css
+++ b/css/styles.css
@@ -742,7 +742,11 @@ footer {
     padding: 0 0 0 15px
 }
 
-
+.project-image {
+    width:300px;
+    height:300px
+     
+}
 
 @media only screen and (max-width: 750px) {
     #experience-timeline:before,#experience-timeline:after {
